refactor: Remove `TempLoggerWrapper` and use `logback` as the default logging implementation for tests.
Signed-off-by: Sun Yuhan <sunyuhan1998@users.noreply.github.com>

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                 <version>${mockserver.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.5.18</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
