--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
                 <version>${mockserver.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-jdk14</artifactId>
+                <version>2.0.17</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
