--- a/sdk-server-common/pom.xml
+++ b/sdk-server-common/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>a2a-java-sdk-transport-http</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
