--- a/sdk-jakarta/pom.xml
+++ b/sdk-jakarta/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.github.a2asdk</groupId>
         <artifactId>a2a-java-sdk-parent</artifactId>
-        <version>0.2.3.Beta1</version>
+        <version>0.2.3.Beta2-SNAPSHOT</version>
     </parent>
     <artifactId>a2a-java-sdk-server-jakarta</artifactId>
 
